--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
+    <title>Product + Engineering | Dana Alibrandi</title>
 
     <%= stylesheet_link_tag "all" %>
     <%= javascript_include_tag  "all" %>
@@ -24,10 +24,7 @@
     <![endif]-->
   </head>
 
-  <body class="<%= page_classes %>">
-
-    <%= partial "navbar" %>
+  <main>
     <%= yield %>
-
-  </body>
+  </main>
 </html>
