--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,12 +1,11 @@
 // General Style Variables
 @import "config/variables";
-@import "config/bootstrap_variables";
 
 // External Frameworks
-@import "bootstrap-sprockets";
-@import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "materialize/components/color";
+@import "materialize";
 
 // Our CSS
 @import "layout/*";
