--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -1,6 +1,9 @@
 .avatar {
-  width: 30px;
+  width: 205px;
+  height: 205px;
   border-radius: 50%;
+  border: 4px double black;
+  margin-top: 35px;
 }
 .avatar-large {
   width: 50px;
