--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row" style="margin-bottom: 0px !important;">
   <%= partial 'user' %>
-  <div class="content-container col l8 s12">
+  <div class="content-container col l8 m6 s12">
   </div>
 </div>
 
