WIP: Began Work on Projects Component
https://trello.com/c/9J0dNQU8/3-create-projects-component

I began work on the Projects component by creating the buttons and laying out the content on the main page. When you hover over the buttons, the SCSS changes to indicate that you can hovering over a clickable object.

* created 'btn-project' class to style main buttons
* created content divs to organize buttons on main page
* created 'content-base' class to style 'btn-project' containers
* added font-awesome icons to visually communicate button content

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,22 @@
 <div class="row" style="margin-bottom: 0px !important;">
   <%= partial 'user' %>
   <div class="content-container col l8 m6 s12">
+    <div class="content-base">
+      <div class="btn-project">
+        <h3>
+          <i class="fa fa-folder-open" aria-hidden="true"></i>
+          Projects
+        </h3>
+      </div>
+    </div>
+    <div class="content-base">
+      <div class="btn-project">
+        <h3>
+          <i class="fa fa-suitcase" aria-hidden="true"></i>
+          CV
+        </h3>
+      </div>
+    </div>
   </div>
 </div>
 
