Finished Projects Component
https://trello.com/c/9J0dNQU8/3-create-projects-component

I finished the projects component by adding a scrollable div that contains cards corresponding to each of my projects. Each card contains links to the site, the Github repo, and the Trello board used to manage my work. Furthermore, the site is entirely responsive, and the content is wrapped in a Materialize grid.

* added a 'content-base' class to contain all of the cards.
* used materialize's default card structure, then overrode necessary properties by creating associated override classes, i.e. 'override-card-actions' overrides the 'card-action' class.
* updated README with instructions on how to run project in development
* added basic jquery to adjust z-index of projects container
* will need to revisit component during polishing in order to add content and imgs

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,21 +1,30 @@
-<div class="row" style="margin-bottom: 0px !important;">
+<div class="row override-row">
   <%= partial 'user' %>
   <div class="content-container col l8 m6 s12">
-    <div class="content-base">
-      <div class="btn-project">
+    <div class="wrapper-btn">
+      <div class="btn-project" id="projects">
         <h3>
           <i class="fa fa-folder-open" aria-hidden="true"></i>
           Projects
         </h3>
       </div>
     </div>
-    <div class="content-base">
-      <div class="btn-project">
+    <div class="wrapper-btn">
+      <div class="btn-project" id="cv">
         <h3>
           <i class="fa fa-suitcase" aria-hidden="true"></i>
           CV
         </h3>
       </div>
+    </div>
+    <div class="content-base">
+    <!--   <div class="btn-user override-btn-user">
+        <h6>
+          <i class="fa fa-suitcase" aria-hidden="true"></i>
+          CV
+        </h6>
+      </div> -->
+      <%= partial 'projects' %>
     </div>
   </div>
 </div>
