--- a/source/stylesheets/layout/_content.scss
+++ b/source/stylesheets/layout/_content.scss
@@ -5,14 +5,28 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  position: relative;
 }
 
-.content-base {
-  width: 97%;
-  height: calc(96% / 2);
+.wrapper-btn {
+  width: 96%;
+  height: calc(94% / 2);
   background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  z-index: 0;
+}
+
+.content-base {
+  height: 98%;
+  width: 96%;
+  left: 2%;
+  top: 1%;
+  position: absolute;
+  background-color: white;
+  border: 4px double black;
+  z-index: -1;
+  overflow: scroll;
 }
