--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -1,8 +1,8 @@
 //override classes for materialize's default cards
 
 .override-card {
-  width: 300px !important;
-  margin: 20px !important;
+  width: 100% !important;
+  margin: 15px !important;
   border: 4px double black !important;
 }
 
