--- a/source/_projects.html.erb
+++ b/source/_projects.html.erb
@@ -1,5 +1,27 @@
+  <div class='navbar-fixed override-nav-box-shadow'>
+    <nav class='override-nav z-depth-0'>
+      <div class="nav-wrapper">
+        <i class="fa fa-angle-double-left brand-logo override-brand-logo left override-icons" id="trigger-back" aria-hidden="true"></i>
+        <div class='brand-logo center override-brand-logo-center'>
+          <i class="fa fa-folder-open center override-icons" aria-hidden="true"></i>
+          Projects
+        </div>
+        <i class="fa fa-bars button-collapse right hide-on-med-and-up override-hamburger-btn" aria-hidden="true" data-activates="mobile-demo"></i>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="sass.html">Sass</a></li>
+          <li><a href="badges.html">Components</a></li>
+          <li><a href="collapsible.html">JavaScript</a></li>
+        </ul>
+        <ul class="side-nav" id="mobile-demo">
+          <li><a href="sass.html">Sass</a></li>
+          <li><a href="badges.html">Components</a></li>
+          <li><a href="collapsible.html">JavaScript</a></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
   <div class='row override-row'>
-    <div class="col s12 m12 l6 justify-content">
+    <div class="col s12 m12 l6 justify-content override-padding">
       <div class="card sticky-action override-card">
         <div class="card-image waves-effect waves-block waves-light override-card-image">
           <img src=http://placehold.it/300x200 alt='stuff' />
@@ -8,7 +30,7 @@
           <span class="card-title activator grey-text text-darken-4 override-card-title">
             Mr. Cocktail v2
             <a class="btn-floating halfway-fab waves-effect waves-light">
-              <i class="fa fa-hand-o-up" aria-hidden="true"></i>
+              <i class="fa fa-file-text-o" aria-hidden="true"></i>
             </a>
             <p>Generate fun recipes to describe your friends!</p>
             </span>
@@ -27,7 +49,7 @@
         </div>
       </div>
     </div>
-    <div class="col s12 m12 l6 justify-content">
+    <div class="col s12 m12 l6 justify-content override-padding">
       <div class="card sticky-action override-card">
         <div class="card-image waves-effect waves-block waves-light override-card-image">
           <img src=http://placehold.it/300x200 alt='stuff' />
@@ -36,7 +58,7 @@
           <span class="card-title activator grey-text text-darken-4 override-card-title">
             Mr. Cocktail v2
             <a class="btn-floating halfway-fab waves-effect waves-light">
-              <i class="fa fa-hand-o-up" aria-hidden="true"></i>
+              <i class="fa fa-file-text-o" aria-hidden="true"></i>
             </a>
             <p>Generate fun recipes to describe your friends!</p>
             </span>
@@ -55,7 +77,7 @@
         </div>
       </div>
     </div>
-    <div class="col s12 m12 l6 justify-content">
+    <div class="col s12 m12 l6 justify-content override-padding">
       <div class="card sticky-action override-card">
         <div class="card-image waves-effect waves-block waves-light override-card-image">
           <img src=http://placehold.it/300x200 alt='stuff' />
@@ -64,7 +86,7 @@
           <span class="card-title activator grey-text text-darken-4 override-card-title">
             Mr. Cocktail v2
             <a class="btn-floating halfway-fab waves-effect waves-light">
-              <i class="fa fa-hand-o-up" aria-hidden="true"></i>
+              <i class="fa fa-file-text-o" aria-hidden="true"></i>
             </a>
             <p>Generate fun recipes to describe your friends!</p>
             </span>
@@ -83,7 +105,7 @@
         </div>
       </div>
     </div>
-    <div class="col s12 m12 l6 justify-content">
+    <div class="col s12 m12 l6 justify-content override-padding">
       <div class="card sticky-action override-card">
         <div class="card-image waves-effect waves-block waves-light override-card-image">
           <img src=http://placehold.it/300x200 alt='stuff' />
@@ -92,7 +114,7 @@
           <span class="card-title activator grey-text text-darken-4 override-card-title">
             Mr. Cocktail v2
             <a class="btn-floating halfway-fab waves-effect waves-light">
-              <i class="fa fa-hand-o-up" aria-hidden="true"></i>
+              <i class="fa fa-file-text-o" aria-hidden="true"></i>
             </a>
             <p>Generate fun recipes to describe your friends!</p>
             </span>
@@ -112,3 +134,12 @@
       </div>
     </div>
   </div>
+
+  <script>
+    $('#trigger-back').click(function() {
+      $('.content-base').css('z-index', -1);
+      $('.wrapper-btn').css('z-index', 0)
+    });
+
+    $(".button-collapse").sideNav();
+  </script>
