--- a/source/stylesheets/layout/_utilities.css.scss
+++ b/source/stylesheets/layout/_utilities.css.scss
@@ -26,6 +26,12 @@
   margin-bottom: 0px !important;
 }
 
+//overrides padding on col elements within grid
+.override-padding {
+  padding-left: 5px !important;
+  padding-right: 5px !important;
+}
+
 // Backgrounds
 .bg-text {
   background: #4a4a4a;
