WIP: Started CV Component
https://trello.com/b/YaL6TiMg/personal-website-v3

I started work on the CV component, so I decided to commit all of my previous changes before getting too deep into it. The changes I'm committing include minor padding/margin tweaks to the navbar and project cards. I also added a favicon and experimented with some landing pages styles using diagonal CSS lines.

* added favicon
* adjusted size of navbar
* adjusted project cards to better fit on the page
* added Mr. Cocktail logo to first project card
* added 'diagonal' css class to create color blocking lines on the main page

--- a/source/_cv.html.erb
+++ b/source/_cv.html.erb
@@ -22,8 +22,10 @@
 </div>
 
 <div class='row override-row'>
-  <ul>
-  </ul>
+  <div class="col s12 m12 l12">
+    <div class="card-job">
+    </div>
+  </div>
 </div>
 
 <script>
