--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,10 @@
 <div class="row override-row">
   <%= partial 'user' %>
+<!--   <div class="col l8 m6 s12">
+
+  </div> -->
   <div class="content-container col l8 m6 s12">
+
     <div class="wrapper-btn">
       <div class="btn-project" id="projects">
         <h3>
