--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,6 +13,7 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title>Product + Engineering | Dana Alibrandi</title>
 
+    <%= favicon_tag 'favicon.ico' %>
     <%= stylesheet_link_tag "all" %>
     <%= javascript_include_tag  "all" %>
 
