--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -5,6 +5,8 @@
   border-bottom: 4px double black !important;
   color: black !important;
   position: initial !important;
+  height: 50px !important;
+  line-height: 50px !important;
   & a {
     color: black !important;
   }
@@ -15,6 +17,8 @@
   margin-left: 10px !important;
   font-size: 1.7rem !important;
   cursor: pointer;
+  display: flex;
+  align-items: center;
   &:hover {
     color: rgba(black, 0.5) !important;
   }
@@ -31,6 +35,7 @@
 .override-icons {
   display: flex !important;
   align-items: center !important;
+  height: 50px !important;
 }
 
 .override-hamburger-btn {
