--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,6 +4,7 @@
 
   </div> -->
   <div class="content-container col l8 m6 s12">
+    <!-- <div class="diagonal"></div> -->
 
     <div class="wrapper-btn">
       <div class="btn-project" id="projects">
