--- a/source/stylesheets/components/_button.scss
+++ b/source/stylesheets/components/_button.scss
@@ -50,3 +50,20 @@
     font-weight: 300;
   }
 }
+
+.btn-expand {
+  font-size: 30px;
+  margin-bottom: 5px;
+  cursor: pointer;
+  &:hover {
+    color: rgba(black, 0.7);
+  }
+}
+
+// aligns btn within job card div
+.container-btn {
+  display: flex;
+  justify-content:center;
+  align-items: flex-end;
+  width: 100%;
+}
