Finished CV Component
https://trello.com/c/s1z1S41h/4-create-resume-cv-component

Finally finished the CV component. Added icons for each employer, added content related to my accomplishments and positions, and properly formatted cards for all screen sizes. In addition, I included jQuery to filter the results so that a user can look at specific experience in isolation from other experience types. Basically, when a user clicks the filter button, jQuery will look to see all cards with a matching class, and it will set 'display: none' to all other cards.

* wrote filterExp(): jQuery to filter experience
* added company and school icons
* adjusting padding/margins for various cards
* added accomplishments and relevant content
* removed sidenav and replaced with icons

--- a/source/stylesheets/components/_button.scss
+++ b/source/stylesheets/components/_button.scss
@@ -52,11 +52,12 @@
 }
 
 .btn-expand {
-  font-size: 30px;
+  font-size: 1.7rem;
   margin-bottom: 5px;
   cursor: pointer;
+  color: #bdbdbd;
   &:hover {
-    color: rgba(black, 0.7);
+    color: rgba(#bdbdbd, 0.7);
   }
 }
 
