--- a/source/_projects.html.erb
+++ b/source/_projects.html.erb
@@ -7,15 +7,10 @@
           Projects
         </div>
         <i class="fa fa-bars button-collapse right hide-on-med-and-up override-hamburger-btn" aria-hidden="true" data-activates="mobile-demo"></i>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">JavaScript</a></li>
-        </ul>
-        <ul class="side-nav" id="mobile-demo">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">JavaScript</a></li>
+        <ul id="nav-mobile" class="right filters">
+          <li><i class="fa fa-laptop tooltipped" aria-hidden="true" data-position='bottom' id="product" data-delay="10" data-tooltip="Filter by Product Experience"></i></li>
+          <li><i class="fa fa-university tooltipped" aria-hidden="true" data-position='bottom' id="teaching" data-delay="10" data-tooltip="Filter by Teaching Experience"></i><li>
+          <li><i class="fa fa-graduation-cap tooltipped" aria-hidden="true" data-position='bottom' data-delay="10" id="education" data-tooltip="Filter by Education"></i><li>
         </ul>
       </div>
     </nav>
@@ -143,6 +138,5 @@
       });
       Materialize.fadeInImage('.logo')
       $('.tooltipped').tooltip({delay: 150});
-      $(".button-collapse").sideNav();
     });
   </script>
