WIP: Polished Landing Page
https://trello.com/c/VRLgSz6l/6-polish-features

I redesigned the landing page using several CSS triangles that I positioned at various angles. I also refactored the jQuery triggers that render the specific partials, mostly so I could leverage my pre-existing '.hidden' class. I also added a footer at the bottom of CV section, and the footer persists regardless of what filtering options you choose.

* added 3 CSS triangles and positioned them on page
* redesigned CV and Project buttons on main page
* refactored jQuery triggers to make code more DRY
* removed '.content-base' from '.content-container'

--- a/source/_cv.html.erb
+++ b/source/_cv.html.erb
@@ -215,12 +215,19 @@
       <%= image_tag 'unc.jpg', class: 'logo-job' %>
     </div>
   </div>
+  <div class="col s12 m12 l12 justify-content end" style="margin-top:20px;">
+    <div class="content-header final-header">
+      <hr>
+      <h5 style="margin-right:0px;"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></h5>
+      <hr>
+    </div>
+  </div>
 </div>
 
 <script>
   $('#trigger-back').click(function() {
-    $('.content-base').css('z-index', -1);
-    $('.wrapper-btn').css('z-index', 0)
+    $('.content-base').addClass('hidden');
+    $('.content-container').removeClass('hidden');
   });
 
   function expandCard(id) {
@@ -259,6 +266,7 @@
           $(this).removeClass('hidden');
         }
       });
+      $('.row > .end').removeClass('hidden');
     });
   }
 
