--- a/source/stylesheets/components/_button.scss
+++ b/source/stylesheets/components/_button.scss
@@ -51,6 +51,34 @@
   }
 }
 
+.btn-main {
+  border: 4px double white;
+  color: white;
+  width: 100%;
+  height: 55px;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  & h6 {
+    font-size: 1.3rem;
+  }
+  &:hover {
+    color: black;
+    background-color: white;
+    border-color: black;
+  }
+}
+
+#cv {
+  margin-top: 10px;
+}
+
+#projects {
+  margin-bottom: 10px;
+}
+
 .btn-expand {
   font-size: 1.7rem;
   margin-bottom: 5px;
