--- a/source/stylesheets/layout/_utilities.css.scss
+++ b/source/stylesheets/layout/_utilities.css.scss
@@ -24,12 +24,17 @@
 // overrides default margin bottom on materialize grid
 .override-row {
   margin-bottom: 0px !important;
+  height: 100vh;
 }
 
 //overrides padding on col elements within grid
 .override-padding {
   padding-left: 5px !important;
   padding-right: 5px !important;
+}
+
+.rm-padding {
+  padding: 0px !important
 }
 
 // Backgrounds
